<resources>
    <string name="app_name">Reserva Restaurantes</string>
    <string name="login">Ingresar</string>
    <string name="register">Registrarse</string>
    <string name="layout_login">Iniciar Sesión</string>
    <string name="nav_header_desc"></string>
    <string name="nav_header_title">Reserva Restaurantes</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="menu_reservas">Restaurantes</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_delete">Borrar Reserva</string>
    <string name="action_signout">Cerrar Sesión</string>
    <string name="action_myProfile">Mi Perfil</string>
    <string name="action_myBooking">Mis Reservas</string>
    <string name="action_reservations">Reservas</string>
    <string name="action_addRestaurant">Restaurantes</string>
    <string name="action_profile">Mi Perfil</string>
    <string name="title_activity_central">CentralActivity</string>
    <string name="msg_restaurant_added">Reserva Agregada</string>
    <string name="msg_reserva_added">Reserva Agregada</string>
    <string name="msg_restaurant_error">Error al intentar agregar un restaurante</string>
    <string name="msg_reserva_error">Error al intentar agregar una reserva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="delete">Eliminar Restaurante</string>
    <string name="seguroBorrar">¿Estás seguro que desea eliminar el restaurante?</string>
    <string name="delete_booking">Eliminar reserva</string>
    <string name="seguroBorrar_booking">¿Estás seguro que desea eliminar el reservas?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="msg_nft_update">Restaurante Actualizado</string>
    <string name="fail_save">No se ha podido subir la imagen</string>
    <string name="success_save">No se ha podido subir la imagen</string>
    <string name="lab_Reservation"> Realizar reserva </string>

    <string name="msg_reserva_update">Reserva Actualizada</string>
    <string name="msg_err">Error al actualizar reserva</string>
</resources>