<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/bookingFrament"
            android:icon="@drawable/ic_baseline_restaurant_24"
            android:title="@string/action_reservations" />
        <item
            android:id="@+id/nav_restaurant"
            android:icon="@android:drawable/ic_input_add"
            android:title="@string/action_addRestaurant" />
        <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/action_profile" />

    </group>
</menu>